# create-tauri-vue-app

./: README.md  index.js  package.json
template/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
template/src/: main.js  style.css
template/src-tauri/: Cargo.toml  tauri.conf.json
template/src-tauri/capabilities/: default.json
template/src-tauri/migrations/: 0000_initial.sql
template/src-tauri/src/: lib.rs
template/src/components/: TaskList.vue
template/src/router/: index.js
template/src/utils/: db.js
template/src/views/: Home.vue
